# system-configuration-rs

./: .gitmodules  .travis.yml  CHANGELOG.md  Cargo.toml  generate_bindings.sh  generate_genscript.py  generate_private_bindings.sh  rustfmt.toml
.github/workflows/: build-and-test.yml  ci.yml  formatting.yml  linting.yml
system-configuration/: Cargo.toml
system-configuration-sys/: .gitignore  Cargo.toml  build.rs
system-configuration-sys/src/: dynamic_store.rs  dynamic_store_copy_specific.rs  dynamic_store_key.rs  lib.rs  network_configuration.rs  network_reachability.rs  preferences.rs  preferences_path.rs  schema_definitions.rs  system_configuration.rs
system-configuration-sys/src/private/: mod.rs  network_configuration_private.rs
system-configuration/examples/: dns.rs  network_configuration.rs  network_set_names.rs  set_dns.rs  watch_dns.rs
system-configuration/src/: dynamic_store.rs  lib.rs  network_configuration.rs  network_reachability.rs  preferences.rs
system-configuration/src/private/: mod.rs  network_configuration_private.rs
