[package]
name = "system-configuration-sys"
version = "0.2.0"
authors = ["Mullvad VPN <admin@mullvad.net>", "Linus Färnstrand <linus@mullvad.net>", "Andrej Mihajlov <and@mullvad.net>"]
description = "Low level bindings to SystemConfiguration framework for macOS"
keywords = ["macos", "system", "configuration", "bindings"]
categories = ["external-ffi-bindings", "os::macos-apis"]
repository = "https://github.com/mullvad/system-configuration-rs"
license = "MIT/Apache-2.0"

[dependencies]
core-foundation-sys = "0.6"
libc = "0.2"
