[package]
name = "system-configuration"
version = "0.4.0"
authors = ["Mullvad VPN <admin@mullvad.net>", "Linus Färnstrand <linus@mullvad.net>", "Andrej Mihajlov <and@mullvad.net>"]
description = "Bindings to SystemConfiguration framework for macOS"
keywords = ["macos", "system", "configuration", "bindings"]
categories = ["api-bindings", "os::macos-apis"]
repository = "https://github.com/mullvad/system-configuration-rs"
license = "MIT/Apache-2.0"
readme = "../README.md"
edition = "2018"

[dependencies]
core-foundation = "0.9"
system-configuration-sys = { path = "../system-configuration-sys", version = "0.4" }
bitflags = "1"
